--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
   <title>My Portfilio</title>
 </head>
 <body>
   <header>
-    <h1>Hello friend...</h1>
+    <h1 class="pressStart">Hello friend...</h1>
   </header>
   <div id="about">
-    <div id="aboutLeft"></div>
+    <div id="aboutLeft">
+      <img src="assets/images/bioPic.png" alt="Bio Picture" id="bioPic">
+      <h1>About Dakuma</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, nulla non ducimus quo vitae modi eius. Voluptates explicabo unde facere dolore ducimus quis amet corrupti, alias eaque dignissimos animi iusto!</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum ipsam temporibus tenetur vel deserunt praesentium repellat, numquam quos velit voluptas recusandae voluptatum eligendi reprehenderit magnam fuga voluptate est dignissimos perferendis.</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe corrupti facere dolorum pariatur cumque odio hic voluptate expedita sapiente id, temporibus eum assumenda doloremque beatae eos vitae, eveniet, blanditiis dolor.</p>
+    </div>
     <div id="aboutRight"></div>
   </div>
   <footer>
