--- a/index.html
+++ b/index.html
@@ -21,7 +21,44 @@
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum ipsam temporibus tenetur vel deserunt praesentium repellat, numquam quos velit voluptas recusandae voluptatum eligendi reprehenderit magnam fuga voluptate est dignissimos perferendis.</p>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe corrupti facere dolorum pariatur cumque odio hic voluptate expedita sapiente id, temporibus eum assumenda doloremque beatae eos vitae, eveniet, blanditiis dolor.</p>
     </div>
-    <div id="aboutRight"></div>
+    <div id="aboutRight">
+      <div class="skillset">
+        <h1 class="title">Languages I Know</h1>
+        <div class="skill">
+          <img src="assets/images/javascript.png" alt="javascript" class="icon">
+          <h3>Javascript</h3>
+          <p>7 years xp</p>
+        </div>
+        <div class="skill">
+          <img src="assets/images/python.png" alt="python" class="icon">
+          <h3>Python</h3>
+          <p>17 years xp</p>
+        </div>
+        <div class="skill">
+          <img src="assets/images/typescript.png" alt="typescript" class="icon">
+          <h3>Typescript</h3>
+          <p>3 years xp</p>
+        </div>
+      </div>
+      <div class="skillset">
+        <h1 class="title">Tools I Use</h1>
+        <div class="skill">
+          <img src="assets/images/tool1.png" alt="tool one" class="icon">
+          <h3>Bugs</h3>
+          <p>87 years xp</p>
+        </div>
+        <div class="skill">
+          <img src="assets/images/tool2.png" alt="tool two" class="icon">
+          <h3>VS Code</h3>
+          <p>10 years xp</p>
+        </div>
+        <div class="skill">
+          <img src="assets/images/tool3.png" alt="tool three" class="icon">
+          <h3>iOS</h3>
+          <p>6 years xp</p>
+        </div>
+      </div>
+    </div>
   </div>
   <footer>
     &copy; 2025 <span class="red">DAKUMA</span> all dance moves reserved.
